deployments/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: varma1909/ticket-auth-test
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          # ports:
          # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
