deployments/next-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-client
spec:
  selector:
    matchLabels:
      app: next-client
  template:
    metadata:
      labels:
        app: next-client
    spec:
      containers:
        - name: next-client
          image: varma1909/next-client
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          # ports:
          # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: next-client-service
spec:
  selector:
    app: next-client
  ports:
    - name: dev_port
      port: 3000
      targetPort: 3000
    - name: deployed_port
      port: 80
      targetPort: 80
