deployments/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: achyuthvarma.com
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePORT: 443
