deployments/kubernetes-nginx.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress-nginx
  labels:
    name: k8s-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # Adding tls
  tls:
    - hosts:
        - achyuthvarma.com
      secretName: ticketing-tls
  rules:
    - host: achyuthvarma.com
      http:
        paths:
          - path: /
            backend:
              serviceName: next-client-service
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3001

          - path: /api/ticket/?(.*)
            backend:
              serviceName: ticketing-service
              servicePort: 3002
